started home section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,24 @@
 
 <!-- header section ends -->
 
+<!-- home section starts -->
 
+<section class="home" id="home">
+
+    <div class="content">
+        <h1>All New For A Better You</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis, accusamus eos! Quibusdam harum natus ullam voluptatibus ut voluptatum explicabo dolor.</p>
+        <a href="#"><button class="btn">order now</button></a>
+
+        <div class="image">
+            <img src="Images/hero_img.jpg" alt="">
+        </div>
+        
+    </div>
+
+</section>
+
+<!-- home section ends -->
 
 
 
