added features section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <!-- header section start -->
 
 <header>
-    <a href="#" class="logo">techno</a>
+    <a href="#" class="logo">MuruliTech</a>
 
     <div id="menu" class="fas fa-bars"></div>
 
@@ -46,26 +46,144 @@
 <section class="home" id="home">
 
     <div class="content">
+
         <h1>All New For A Better You</h1>
+
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis, accusamus eos! Quibusdam harum natus ullam voluptatibus ut voluptatum explicabo dolor.</p>
+
         <a href="#"><button class="btn">order now</button></a>
 
-        <div class="image">
-            <img src="Images/hero_img.jpg" alt="">
-        </div>
-        
+    </div>
+
+    <div class="image">
+
+        <img src="Images/hero_img - Edited.png" alt="">
+
     </div>
 
 </section>
 
 <!-- home section ends -->
 
+<!-- core features section start -->
 
+<section class="core">
 
+    <h1 class="heading">Outstanding Core Features of The Product</h1>
 
+    <div class="row">
 
+        <div class="image">
 
+            <img src="Images/core_img - Edited.png" alt="">
 
+        </div>
+
+        <div class="box-container">
+
+            <div class="box">
+                <h3> <i class="fas fa-user"></i> user friendly </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi dolore quis voluptate doloremque. Optio, perspiciatis sint libero blanditiis earum ratione.</p>
+            </div>
+
+            <div class="box">
+                <h3> <i class="fas fa-shield-alt"></i> high security </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi dolore quis voluptate doloremque. Optio, perspiciatis sint libero blanditiis earum ratione.</p>
+            </div>
+
+            <div class="box">
+                <h3> <i class="fas fa-sync-alt"></i> unlimited updates </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi dolore quis voluptate doloremque. Optio, perspiciatis sint libero blanditiis earum ratione.</p>
+            </div>
+
+            <div class="box">
+                <h3> <i class="fas fa-magic"></i> unlimited features </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi dolore quis voluptate doloremque. Optio, perspiciatis sint libero blanditiis earum ratione.</p>
+            </div>
+
+        </div>
+
+    </div>
+</section>
+
+<!-- core features section ends -->
+
+<!-- about section starts  -->
+
+<section class="about" id="about">
+
+    <h1 class="heading">about the product</h1>
+
+    <div class="row">
+
+        <div class="image">
+            <img src="Images/about-img.jpg" alt="">
+        </div>
+
+        <div class="content">
+            <h3>Best and Fashionable Smart Watch For Easy Life.</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora, voluptatum aut tenetur molestias pariatur beatae adipisci nulla distinctio ea! Obcaecati.</p>
+            <p> <i class="fas fa-check-circle"></i> Attractive Interface with Many Options </p>
+            <p> <i class="fas fa-check-circle"></i> Live Chat and Instant Notification </p>
+            <p> <i class="fas fa-check-circle"></i> Install app with Unlimited Features </p>
+            <a href="#"><button class="btn">learn more</button></a>
+        </div>
+
+    </div>
+
+</section>
+
+<!-- about section ends  -->
+
+<!-- features section starts -->
+
+<secton class="features" id="features">
+
+    <h1 class="heading">Features are Available in The Watch</h1>
+
+    <div class="box-container">
+
+        <div class="box">
+            <i class="fas fa-bell"></i>
+            <h3>Notificatons Alert</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate officiis delectus saepe laborum natus? Similique neque corrupti sapiente molestiae exercitationem?</p>
+        </div>
+
+        <div class="box">
+            <i class="fas fa-comments"></i>
+            <h3>Live Chat</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate officiis delectus saepe laborum natus? Similique neque corrupti sapiente molestiae exercitationem?</p>
+        </div>
+
+        <div class="box">
+            <i class="fas fa-heartbeat"></i>
+            <h3>Heart Beat Tracker</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate officiis delectus saepe laborum natus? Similique neque corrupti sapiente molestiae exercitationem?</p>
+        </div>
+
+        <div class="box">
+            <i class="fas fa-map-marker-alt"></i>
+            <h3>GPS Tracker</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate officiis delectus saepe laborum natus? Similique neque corrupti sapiente molestiae exercitationem?</p>
+        </div>
+
+        <div class="box">
+            <i class="fas fa-wifi"></i>
+            <h3>WiFi Facility</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate officiis delectus saepe laborum natus? Similique neque corrupti sapiente molestiae exercitationem?</p>
+        </div>
+
+        <div class="box">
+            <i class="fas fa-cloud-sun"></i>
+            <h3>Weather Updates</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate officiis delectus saepe laborum natus? Similique neque corrupti sapiente molestiae exercitationem?</p>
+        </div>
+
+    </div>
+
+</secton>
+
+<!-- features section ends -->
 
 
 
