created and edited products section

--- a/index.html
+++ b/index.html
@@ -185,7 +185,68 @@
 
 <!-- features section ends -->
 
+<!-- product section starts -->
 
+<section class="product" id="product">
+
+    <h1 class="heading">Our Awesome Products. Choose Your Best</h1>
+
+    <div class="box-container">
+
+        <div class="box">
+            <div class="image">
+                <img src="Images/w44.png" alt="">
+            </div>
+            <div class="content">
+                <h3>smart watch</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dolorum fugit quasi voluptates est nobis deleniti. Tenetur iure distinctio amet!</p>
+                <div class="price">Kshs. 25 000</div>
+                <a href="#"><button class="btn">add to cart</button></a>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="Images/w11.png" alt="">
+            </div>
+            <div class="content">
+                <h3>smart watch</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dolorum fugit quasi voluptates est nobis deleniti. Tenetur iure distinctio amet!</p>
+                <div class="price">Kshs. 20 000</div>
+                <a href="#"><button class="btn">add to cart</button></a>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="Images/w22.png" alt="">
+            </div>
+            <div class="content">
+                <h3>smart watch</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dolorum fugit quasi voluptates est nobis deleniti. Tenetur iure distinctio amet!</p>
+                <div class="price">Kshs. 35 000</div>
+                <a href="#"><button class="btn">add to cart</button></a>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="Images/w33.png" alt="">
+            </div>
+            <div class="content">
+                <h3>smart watch</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dolorum fugit quasi voluptates est nobis deleniti. Tenetur iure distinctio amet!</p>
+                <div class="price">Kshs. 30 000</div>
+                <a href="#"><button class="btn">add to cart</button></a>
+            </div>
+        </div>
+
+    </div>
+
+
+</section>
+
+<!-- product section ends -->
 
 
 
